--- a/src/main/resources/templates/AdministracionPrincipal.html
+++ b/src/main/resources/templates/AdministracionPrincipal.html
@@ -102,13 +102,17 @@
 				COMPLEMENTOS
 			</div>
 
-			
+			<!-- Nav Item - Tables -->
 			<li class="nav-item">
-				<a class="nav-link" th:href="@{/PublicControlador/}">
+				<a class="nav-link" th:href="@{/AdministrarPrincipal}">
 					<i class="fas fa-fw fa-table"></i>
-					<span>MIS PUBLICACIONES</span></a>
+					<span>PUBLICACIONES</span></a>
 			</li>
-
+			<li class="nav-item">
+				<a class="nav-link" th:href="@{/PublicControlador/FormuCrearpublic}">
+					<i class="fas fa-fw fa-table"></i>
+					<span>CREAR PUBLICACIÓN</span></a>
+			</li>
 			<!-- Divider -->
 			<hr class="sidebar-divider d-none d-md-block">
 
@@ -151,12 +155,10 @@
 						</div>
 					</form>
 
-
-
 					<!-- Topbar Navbar -->
 					<ul class="navbar-nav ml-auto">
 
-						<!-- Nav Item - Search Dropdown (Visible Only XS)-->
+						<!-- Nav Item - Search Dropdown (Visible Only XS) -->
 						<li class="nav-item dropdown no-arrow d-sm-none">
 							<a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
 								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -188,7 +190,7 @@
 							<a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
 								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<span class="mr-2 d-none d-lg-inline text-gray-600 small">MI PERFIL</span>
-								<img class="img-profile rounded-circle" src="img/undraw_profile.svg">
+								<img class="img-profile rounded-circle" th:src="@{/img/undraw_profile.svg}">
 							</a>
 							<!-- Dropdown - User Information-->
 							<div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -201,6 +203,10 @@
 									<i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
 									AJUSTES
 								</a>
+								<a class="dropdown-item" th:href="@{/PublicControlador/}">
+									<i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+									MIS PUBLICACIONES
+								</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
 									<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -208,155 +214,213 @@
 								</a>
 							</div>
 						</li>
-
 					</ul>
-
 				</nav>
 				<!-- End of Topbar -->
 
-				<!-- Begin Page Content -->
-				<div class="container-fluid">
+				<!-- Divider -->
+				<hr class="sidebar-divider d-none d-md-block">
 
-					<!-- Content Row -->
-					<div class="row">
+				<!-- Sidebar Toggler (Sidebar) -->
+				<div class="text-center d-none d-md-inline">
+					<button class="rounded-circle border-0" id="sidebarToggle"></button>
+				</div>
 
-						<!-- Earnings (Monthly) Card Example -->
-						<div class="col-xl-3 col-md-6 mb-4">
-							<div class="card border-left-primary shadow h-100 py-2">
-								<div class="card-body">
-									<div class="row no-gutters align-items-center">
-										<div class="col mr-2">
-											<div class="text-xl font-weight-bold text-primary text-uppercase mb-1">
-												MI CUENTA</div>
 
+				</ul>
+				<!-- End of Sidebar -->
+
+				<!-- Content Wrapper -->
+				<div id="content-wrapper" class="d-flex flex-column">
+
+					<!-- Begin Page Content -->
+					<div class="container-fluid">
+
+						<!-- Content Row -->
+						<div class="row">
+
+
+							<!-- Earnings (Monthly) Card Example -->
+							<div class="col-xl-3 col-md-6 mb-4">
+								<div class="card border-left-success shadow h-100 py-2">
+									<div class="card-body">
+										<div class="row no-gutters align-items-center">
+											<div class="col mr-2">
+												<div class="text-xl font-weight-bold text-success text-uppercase mb-1">
+													INICIO</div>
+											</div>
+											<div class="col-auto">
+												<a th:href="@{/PaginaPrincipal/}">
+													<i class="fas fa-fw fa-table fa-4x text-gray-400"></i>
+												</a>
+											</div>
 										</div>
-										<div class="col-auto">
+									</div>
+								</div>
+							</div>
 
-											<a th:href="@{/login}">
-												<i class="fas fa fa-user-circle fa-4x text-gray-300"></i>
-											</a>
+							<!-- Pending Requests Card Example -->
+							<div class="col-xl-3 col-md-6 mb-4">
+								<div class="card border-left-warning shadow h-100 py-2">
+									<div class="card-body">
+										<div class="row no-gutters align-items-center">
+											<div class="col mr-2">
+												<div class="text-xl font-weight-bold text-warning text-uppercase mb-1">
+													CREAR PUBLICACIÓN</div>
+											</div>
+											<div class="col-auto">
+												<a th:href="@{/PublicControlador/FormuCrearpublic}">
+													<i class="fas fa-comments fa-4x text-gray-300"></i>
+												</a>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 
+						<!--Content Row -->
 
-						<!-- Pending Requests Card Example -->
-						<div class="col-xl-3 col-md-6 mb-4">
-							<div class="card border-left-warning shadow h-100 py-2">
-								<div class="card-body">
-									<div class="row no-gutters align-items-center">
-										<div class="col mr-2">
-											<div class="text-xl font-weight-bold text-warning text-uppercase mb-1">
-												SECCIONES</div>
-										</div>
-										<div class="col-auto">
-											<a th:href="@{/secciones}">
-												<i class="fas fa-comments fa-4x text-gray-300"></i>
-											</a>
-										</div>
-									</div>
+						<div class="center">
+
+							<!-- Area Chart -->
+
+							<div class="card mb-4">
+								<div class="card-header py-3">
+									<h6 class="m-3 font-weight-bold text-primary">PUBLICACIONES</h6>
 								</div>
+								<tbody>
+									<tr th:each="Publicacion:${listarPublic}">
+										<td>
+											<div class="card text-center">
+
+												<div id="carouselExampleControls" class="carousel slide"
+													data-ride="carousel">
+													<div class="carousel-inner">
+														<div class="carousel-item active">
+															<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																class="d-block w-100" alt="primera imagen">
+														</div>
+														<div class="carousel-item">
+															<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																class="d-block w-100" alt="Segunda imagen">
+														</div>
+														<div class="carousel-item">
+															<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																class="d-block w-100" alt="Tercer imagen">
+														</div>
+													</div>
+													<a class="carousel-control-prev" href="#carouselExampleControls"
+														role="button" data-slide="prev">
+														<span class="carousel-control-prev-icon"
+															aria-hidden="true"></span>
+														<span class="sr-only">Anterior</span>
+													</a>
+													<a class="carousel-control-next" href="#carouselExampleControls"
+														role="button" data-slide="next">
+														<span class="carousel-control-next-icon"
+															aria-hidden="true"></span>
+														<span class="sr-only">Siguiente</span>
+													</a>
+												</div>
+
+										</td>
+										<br>
+
+										<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
+										<label>
+											DESCRIPCIÓN
+											<p scope="row" th:text="${Publicacion.Descripcion}"></p>
+										</label>
+										<label>
+											DIRECCIÓN DE LA PROPIEDAD
+											<p scope="row" th:text="${Publicacion.direccion}"></p>
+										</label>
+										<label>
+											DISPONIBLE PARA
+											<P scope="row" th:text="${Publicacion.disponible}"></P>
+										</label>
+										<label>
+											MEDIDAS DE LA PROPIEDAD
+											<p scope="row" th:text="${Publicacion.medida}"></p>
+
+										</label>
+										<label>
+											PRECIO
+											<p scope="row" th:text="${Publicacion.precio}"></p>
+										</label>
 							</div>
+							</tr>
+							</tbody>
 						</div>
 					</div>
+				</div>
 
-					<!--Content Row -->
+				<!--container-fluid -->
+			</div>
+		</div>
+	</div>
+	<!-- End of Main Content -->
 
-					<div class="center">
+	<!--Footer-->
+	<footer class="sticky-footer bg-white">
+		<div class="container my-auto">
+			<div class="copyright text-center my-auto">
+				<span>Copyright; MR 2024</span>
+			</div>
+		</div>
+	</footer>
+	<!-- End of Footer -->
 
-						<!-- Area Chart -->
-						<div class="col-xl-8 col-lg-7">
-							<div class="card shadow mb-4">
+	</div>
+	<!-- End of Content Wrapper -->
 
+	</div>
+	<!-- End of Page Wrapper -->
 
-								<!--Illustrations -->
-								<div class="card shadow mb-4">
-									<div class="card-header py-3">
-										<h6 class="m-0 font-weight-bold text-primary">MIS ULTIMAS PUBLICACIONES</h6>
-									</div>
+	<!-- Scroll to Top Button-->
+	<a class="scroll-to-top rounded" href="#page-top">
+		<i class="fas fa-angle-up"></i>
+	</a>
 
-									<!--<div class="card shadow mb-4">
-								<div class="card-header py-3">
-									<h6 class="m-0 font-weight-bold text-primary">PUBLICACIONES</h6>
-								</div>
-								<div class="card-body">
-									<div class="text-center">
-										<img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-											src="img/undraw_posting_photo.svg" alt="...">
-									</div>
-									<p>Add some quality, svg illustrations to your project courtesy of <a
-											target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a
-										constantly updated collection of beautiful svg images that you can use
-										completely free and without attribution!</p>
-									<a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on
-										unDraw &rarr;</a>
-								</div>
-							</div>-->
+	<!-- Logout Modal-->
+	<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+					<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">×</span>
+					</button>
+				</div>
+				<div class="modal-body">Select "Logout" below if you are ready to end your
+					current session.
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+					<a class="btn btn-primary" href="login.html">Logout</a>
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<!-- Bootstrap core JavaScript-->
+	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
-								</div>
-								<!-- End of Main Content -->
-								<br>
-								<br>
+	<!-- Core plugin JavaScript-->
+	<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
-								<!--Footer-->
-								<footer class="sticky-footer bg-white">
-									<div class="container my-auto">
-										<div class="copyright text-center my-auto">
-											<span>Copyright; MR 2023</span>
-										</div>
-									</div>
-								</footer>
-								<!-- End of Footer -->
-							</div>
-							<!-- End of Content Wrapper -->
-						</div>
-						<!-- End of Page Wrapper -->
-						<!-- Scroll to Top Button-->
-						<a class="scroll-to-top rounded" href="#page-top">
-							<i class="fas fa-angle-up"></i>
-						</a>
-						<!-- Logout Modal-->
-						<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog"
-							aria-labelledby="exampleModalLabel" aria-hidden="true">
-							<div class="modal-dialog" role="document">
-								<div class="modal-content">
-									<div class="modal-header">
-										<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-										<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-											<span aria-hidden="true">×</span>
-										</button>
-									</div>
-									<div class="modal-body">Select "Logout" below if you are ready to end your
-										current session.
-									</div>
-									<div class="modal-footer">
-										<button class="btn btn-secondary" type="button"
-											data-dismiss="modal">Cancel</button>
-										<a class="btn btn-primary" href="login.html">Logout</a>
-									</div>
-								</div>
-							</div>
-						</div>
+	<!-- Custom scripts for all pages-->
+	<script th:src="@{/js/sb-admin-2.min.js}"></script>
 
-						<!-- Bootstrap core JavaScript-->
-						<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-						<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<!-- Page level plugins -->
+	<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
 
-						<!-- Core plugin JavaScript-->
-						<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
-
-						<!-- Custom scripts for all pages-->
-						<script th:src="@{/js/sb-admin-2.min.js}"></script>
-
-						<!-- Page level plugins -->
-						<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
-
-						<!-- Page level custom scripts -->
-						<script th:src="@{/js/demo/chart-area-demo.js}"></script>
-						<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
+	<!-- Page level custom scripts -->
+	<script th:src="@{/js/demo/chart-area-demo.js}"></script>
+	<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
 
 </body>
 
