--- a/src/main/resources/templates/AdministrarPubli.html
+++ b/src/main/resources/templates/AdministrarPubli.html
@@ -217,57 +217,171 @@
 					</ul>
 				</nav>
 				<!-- End of Topbar -->
-					<!-- Area Chart -->
-						<div class="card shadow mb-4">
-							<div class="card">
-								<tbody>
-									<tr th:each="Publicacion:${listarPublic}">
-										<div class="card-body">
-											<div class="card text-center">
-												<td>
-													<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
-														class="bd-placeholder-img rounded img-fluid">
-												</td>
-												<td>
-													<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
-													<p scope="row" th:text="${Publicacion.Descripcion}"></p>
-													<p scope="row" th:text="${Publicacion.direccion}"></p>
-													<P scope="row" th:text="${Publicacion.disponible}"></P>
-													<p scope="row" th:text="${Publicacion.medida}"></p>
-													<p scope="row" th:text="${Publicacion.precio}"></p>
-													<a
-														th:href="@{/PublicControlador/Eliminarpublic/{IdLugar}(IdLugar=${Publicacion.IdLugar})}">
-														<button type="button"
-															class="btn btn-outline-primary me-md-2">Eliminar</button>
-													</a>
-												</td>
+
+				<!-- Divider -->
+				<hr class="sidebar-divider d-none d-md-block">
+
+				<!-- Sidebar Toggler (Sidebar) -->
+				<div class="text-center d-none d-md-inline">
+					<button class="rounded-circle border-0" id="sidebarToggle"></button>
+				</div>
+
+
+				</ul>
+				<!-- End of Sidebar -->
+
+				<!-- Content Wrapper -->
+				<div id="content-wrapper" class="d-flex flex-column">
+
+					<!-- Begin Page Content -->
+					<div class="container-fluid">
+
+						<!-- Content Row -->
+						<div class="row">
+
+
+							<!-- Earnings (Monthly) Card Example -->
+							<div class="col-xl-3 col-md-6 mb-4">
+								<div class="card border-left-success shadow h-100 py-2">
+									<div class="card-body">
+										<div class="row no-gutters align-items-center">
+											<div class="col mr-2">
+												<div class="text-xl font-weight-bold text-success text-uppercase mb-1">
+													INICIO</div>
 											</div>
-									</tr>
-								</tbody>
+											<div class="col-auto">
+												<a th:href="@{/PaginaPrincipal/}">
+													<i class="fas fa-fw fa-table fa-4x text-gray-400"></i>
+												</a>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
+
+							<!-- Pending Requests Card Example -->
+							<div class="col-xl-3 col-md-6 mb-4">
+								<div class="card border-left-warning shadow h-100 py-2">
+									<div class="card-body">
+										<div class="row no-gutters align-items-center">
+											<div class="col mr-2">
+												<div class="text-xl font-weight-bold text-warning text-uppercase mb-1">
+													CREAR PUBLICACIÓN</div>
+											</div>
+											<div class="col-auto">
+												<a th:href="@{/PublicControlador/FormuCrearpublic}">
+													<i class="fas fa-comments fa-4x text-gray-300"></i>
+												</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<!--Content Row -->
+
+						<div class="center">
+
+							<!-- Area Chart -->
+
+							<div class="card mb-4">
+								<div class="card-header py-3">
+									<h6 class="m-3 font-weight-bold text-primary">PUBLICACIONES</h6>
+								</div>
+								<tbody>
+									<tr th:each="Publicacion:${listarPublic}"	>
+										<td>
+											<div class="card text-center">
+
+												<div id="carouselExampleControls" class="carousel slide"
+													data-ride="carousel">
+													<div class="carousel-inner">
+														<div class="carousel-item active">
+															<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																class="d-block w-100" alt="primera imagen">
+														</div>
+														<div class="carousel-item">
+															<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																class="d-block w-100" alt="Segunda imagen">
+														</div>
+														<div class="carousel-item">
+															<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																class="d-block w-100" alt="Tercer imagen">
+														</div>
+													</div>
+													<a class="carousel-control-prev" href="#carouselExampleControls"
+														role="button" data-slide="prev">
+														<span class="carousel-control-prev-icon"
+															aria-hidden="true"></span>
+														<span class="sr-only">Anterior</span>
+													</a>
+													<a class="carousel-control-next" href="#carouselExampleControls"
+														role="button" data-slide="next">
+														<span class="carousel-control-next-icon"
+															aria-hidden="true"></span>
+														<span class="sr-only">Siguiente</span>
+													</a>
+												</div>
+
+										</td>
+										<br>
+
+										<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
+										<label>
+											DESCRIPCIÓN
+											<p scope="row" th:text="${Publicacion.Descripcion}"></p>
+										</label>
+										<label>
+											DIRECCIÓN DE LA PROPIEDAD
+											<p scope="row" th:text="${Publicacion.direccion}"></p>
+										</label>
+										<label>
+											DISPONIBLE PARA
+											<P scope="row" th:text="${Publicacion.disponible}"></P>
+										</label>
+										<label>
+											MEDIDAS DE LA PROPIEDAD
+											<p scope="row" th:text="${Publicacion.medida}"></p>
+
+										</label>
+										<label>
+											PRECIO
+											<p scope="row" th:text="${Publicacion.precio}"></p>
+										</label>
+							</div>
+							</tr>
+							</tbody>
 						</div>
 					</div>
 				</div>
+
 				<!--container-fluid -->
 			</div>
-			<!-- End of Main Content -->
-			<!--Footer-->
-			<footer class="sticky-footer bg-white">
-				<div class="container my-auto">
-					<div class="copyright text-center my-auto">
-						<span>Copyright; MR 2023</span>
-					</div>
-				</div>
-			</footer>
-			<!-- End of Footer -->
 		</div>
-		<!-- End of Content Wrapper -->
+		<!-- End of Main Content -->
+
+		<!--Footer-->
+		<footer class="sticky-footer bg-white">
+			<div class="container my-auto">
+				<div class="copyright text-center my-auto">
+					<span>Copyright; MR 2024</span>
+				</div>
+			</div>
+		</footer>
+		<!-- End of Footer -->
+
+	</div>
+	<!-- End of Content Wrapper -->
+
 	</div>
 	<!-- End of Page Wrapper -->
+
 	<!-- Scroll to Top Button-->
 	<a class="scroll-to-top rounded" href="#page-top">
 		<i class="fas fa-angle-up"></i>
 	</a>
+
 	<!-- Logout Modal-->
 	<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 		aria-hidden="true">
@@ -289,18 +403,24 @@
 			</div>
 		</div>
 	</div>
+
 	<!-- Bootstrap core JavaScript-->
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+
 	<!-- Core plugin JavaScript-->
 	<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
+
 	<!-- Custom scripts for all pages-->
 	<script th:src="@{/js/sb-admin-2.min.js}"></script>
+
 	<!-- Page level plugins -->
 	<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+
 	<!-- Page level custom scripts -->
 	<script th:src="@{/js/demo/chart-area-demo.js}"></script>
 	<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
+
 </body>
 
 </html>
