--- a/src/main/resources/templates/apartamentos.html
+++ b/src/main/resources/templates/apartamentos.html
@@ -65,7 +65,7 @@
 				</a>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/casas}">CASAS</a>
+						<a class="collapse-item active" th:href="@{/casas}">CASAS</a>
 						<a class="collapse-item" th:href="@{/habitaciones}">HABITACIONES</a>
 						<a class="collapse-item" th:href="@{/apartamentos}">APARTAMENTOS</a>
 						<a class="collapse-item" th:href="@{/lotes}">LOTES</a>
@@ -245,6 +245,7 @@
 						<!-- Content Row -->
 						<div class="row">
 
+
 							<!-- Earnings (Monthly) Card Example -->
 							<div class="col-xl-3 col-md-6 mb-4">
 								<div class="card border-left-success shadow h-100 py-2">
@@ -263,6 +264,25 @@
 									</div>
 								</div>
 							</div>
+
+							<!-- Pending Requests Card Example -->
+							<div class="col-xl-3 col-md-6 mb-4">
+								<div class="card border-left-warning shadow h-100 py-2">
+									<div class="card-body">
+										<div class="row no-gutters align-items-center">
+											<div class="col mr-2">
+												<div class="text-xl font-weight-bold text-warning text-uppercase mb-1">
+													CREAR PUBLICACIÓN</div>
+											</div>
+											<div class="col-auto">
+												<a th:href="@{/PublicControlador/FormuCrearpublic}">
+													<i class="fas fa-comments fa-4x text-gray-300"></i>
+												</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 
 						<!--Content Row -->
@@ -270,69 +290,79 @@
 						<div class="center">
 
 							<!-- Area Chart -->
+
 							<div class="card mb-4">
-								<div class="card">
-									<tbody>
-										<tr th:each="Publicacion:${listarPublic}"
-											th:if="${Publicacion.tipoLugar == 'APARTAMENTOS'}">
-											<td>
-												<div class="card-body">
-													<div class="card text-center">
-
-														<div id="carouselExampleControls" class="carousel slide"
-															data-ride="carousel">
-															<div class="carousel-inner">
-																<div class="carousel-item active">
-																	<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
-																		class="d-block w-100" alt="primera imagen">
-																</div>
-																<div class="carousel-item">
-																	<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
-																		class="d-block w-100" alt="Segunda imagen">
-																</div>
-																<div class="carousel-item">
-																	<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
-																		class="d-block w-100" alt="Tercer imagen">
-																</div>
-															</div>
-															<a class="carousel-control-prev"
-																href="#carouselExampleControls" role="button"
-																data-slide="prev">
-																<span class="carousel-control-prev-icon"
-																	aria-hidden="true"></span>
-																<span class="sr-only">Previous</span>
-															</a>
-															<a class="carousel-control-next"
-																href="#carouselExampleControls" role="button"
-																data-slide="next">
-																<span class="carousel-control-next-icon"
-																	aria-hidden="true"></span>
-																<span class="sr-only">Next</span>
-															</a>
-														</div>
-
-											</td>
-											<td>
-												<label for="formGroupExampleInput" class="form-label">
-
-													<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
-													<p scope="row" th:text="${Publicacion.Descripcion}"></p>
-													<p scope="row" th:text="${Publicacion.direccion}"></p>
-													<P scope="row" th:text="${Publicacion.disponible}"></P>
-													<p scope="row" th:text="${Publicacion.medida}"></p>
-													<p scope="row" th:text="${Publicacion.precio}"></p>
-
-											</td>
-
-											</label>
+								<div class="card-header py-3">
+									<h6 class="m-3 font-weight-bold text-primary">APARTAMENTOS</h6>
 								</div>
-								</tr>
-								</tbody>
-							</div>
+								<tbody>
+									<tr th:each="Publicacion:${listarPublic}"
+										th:if="${Publicacion.tipoLugar == 'APARTAMENTOS'}">
+										<td>
+											<div class="card text-center">
 
+												<div id="carouselExampleControls" class="carousel slide"
+													data-ride="carousel">
+													<div class="carousel-inner">
+														<div class="carousel-item active">
+															<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																class="d-block w-100" alt="primera imagen">
+														</div>
+														<div class="carousel-item">
+															<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																class="d-block w-100" alt="Segunda imagen">
+														</div>
+														<div class="carousel-item">
+															<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																class="d-block w-100" alt="Tercer imagen">
+														</div>
+													</div>
+														<a class="carousel-control-prev" href="#carouselExampleControls"
+															role="button" data-slide="prev">
+															<span class="carousel-control-prev-icon"
+																aria-hidden="true"></span>
+															<span class="sr-only">Anterior</span>
+														</a>
+														<a class="carousel-control-next" href="#carouselExampleControls"
+															role="button" data-slide="next">
+															<span class="carousel-control-next-icon"
+																aria-hidden="true"></span>
+															<span class="sr-only">Siguiente</span>
+														</a>
+													</div>
+												
+										</td>
+										<br>
+
+										<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
+										<label>
+											DESCRIPCIÓN
+											<p scope="row" th:text="${Publicacion.Descripcion}"></p>
+										</label>
+										<label>
+											DIRECCIÓN DE LA PROPIEDAD
+											<p scope="row" th:text="${Publicacion.direccion}"></p>
+										</label>
+										<label>
+											DISPONIBLE PARA
+											<P scope="row" th:text="${Publicacion.disponible}"></P>
+										</label>
+										<label>
+											MEDIDAS DE LA PROPIEDAD
+											<p scope="row" th:text="${Publicacion.medida}"></p>
+
+										</label>
+										<label>
+											PRECIO
+											<p scope="row" th:text="${Publicacion.precio}"></p>
+										</label>
+							</div>
+							</tr>
+							</tbody>
 						</div>
 					</div>
 				</div>
+
 				<!--container-fluid -->
 			</div>
 		</div>
@@ -342,61 +372,61 @@
 		<footer class="sticky-footer bg-white">
 			<div class="container my-auto">
 				<div class="copyright text-center my-auto">
-					<span>Copyright; MR 2023</span>
+					<span>Copyright; MR 2024</span>
 				</div>
 			</div>
 		</footer>
 		<!-- End of Footer -->
-	</div>
+
 	</div>
 	<!-- End of Content Wrapper -->
-</body>
-</div>
-<!-- End of Page Wrapper -->
 
-<!-- Scroll to Top Button-->
-<a class="scroll-to-top rounded" href="#page-top">
-	<i class="fas fa-angle-up"></i>
-</a>
+	</div>
+	<!-- End of Page Wrapper -->
 
-<!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-	aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-				<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">×</span>
-				</button>
-			</div>
-			<div class="modal-body">Select "Logout" below if you are ready to end your
-				current session.
-			</div>
-			<div class="modal-footer">
-				<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-				<a class="btn btn-primary" href="login.html">Logout</a>
+	<!-- Scroll to Top Button-->
+	<a class="scroll-to-top rounded" href="#page-top">
+		<i class="fas fa-angle-up"></i>
+	</a>
+
+	<!-- Logout Modal-->
+	<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+					<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">×</span>
+					</button>
+				</div>
+				<div class="modal-body">Select "Logout" below if you are ready to end your
+					current session.
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+					<a class="btn btn-primary" href="login.html">Logout</a>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
-<!-- Bootstrap core JavaScript-->
-<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<!-- Bootstrap core JavaScript-->
+	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
-<!-- Core plugin JavaScript-->
-<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
+	<!-- Core plugin JavaScript-->
+	<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
-<!-- Custom scripts for all pages-->
-<script th:src="@{/js/sb-admin-2.min.js}"></script>
+	<!-- Custom scripts for all pages-->
+	<script th:src="@{/js/sb-admin-2.min.js}"></script>
 
-<!-- Page level plugins -->
-<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+	<!-- Page level plugins -->
+	<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
 
-<!-- Page level custom scripts -->
-<script th:src="@{/js/demo/chart-area-demo.js}"></script>
-<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
+	<!-- Page level custom scripts -->
+	<script th:src="@{/js/demo/chart-area-demo.js}"></script>
+	<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
 
 </body>
 
