--- a/src/main/resources/templates/venta.html
+++ b/src/main/resources/templates/venta.html
@@ -2,7 +2,6 @@
 <html lang="es">
 
 <head>
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -103,20 +102,17 @@
 				COMPLEMENTOS
 			</div>
 
-			<!-- Nav Item - Charts -->
-			<li class="nav-item">
-				<a class="nav-link" th:href="@{/login}">
-					<i class="fas fa fa-user-circle fa-4x text-gray-2"></i>
-					<span>MI CUENTA</span></a>
-			</li>
-
 			<!-- Nav Item - Tables -->
 			<li class="nav-item">
 				<a class="nav-link" th:href="@{/AdministrarPrincipal}">
 					<i class="fas fa-fw fa-table"></i>
 					<span>PUBLICACIONES</span></a>
 			</li>
-
+			<li class="nav-item">
+				<a class="nav-link" th:href="@{/PublicControlador/FormuCrearpublic}">
+					<i class="fas fa-fw fa-table"></i>
+					<span>CREAR PUBLICACIÓN</span></a>
+			</li>
 			<!-- Divider -->
 			<hr class="sidebar-divider d-none d-md-block">
 
@@ -194,7 +190,7 @@
 							<a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
 								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<span class="mr-2 d-none d-lg-inline text-gray-600 small">MI PERFIL</span>
-								<img class="img-profile rounded-circle" src="img/undraw_profile.svg">
+								<img class="img-profile rounded-circle" th:src="@{/img/undraw_profile.svg}">
 							</a>
 							<!-- Dropdown - User Information-->
 							<div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -218,9 +214,7 @@
 								</a>
 							</div>
 						</li>
-
 					</ul>
-
 				</nav>
 				<!-- End of Topbar -->
 
@@ -245,27 +239,6 @@
 						<!-- Content Row -->
 						<div class="row">
 
-							<!-- Earnings (Monthly) Card Example 
-							<div class="col-xl-3 col-md-6 mb-4">
-								<div class="card border-left-primary shadow h-100 py-2">
-									<div class="card-body">
-										<div class="row no-gutters align-items-center">
-											<div class="col mr-2">
-												<div class="text-xl font-weight-bold text-primary text-uppercase mb-1">
-													MI CUENTA</div>
-
-											</div>
-											<div class="col-auto">
-
-												<a th:href="@{/login}">
-													<i class="fas fa fa-user-circle fa-4x text-gray-300"></i>
-												</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>-->
-
 							<!-- Earnings (Monthly) Card Example -->
 							<div class="col-xl-3 col-md-6 mb-4">
 								<div class="card border-left-success shadow h-100 py-2">
@@ -285,48 +258,17 @@
 								</div>
 							</div>
 
-							<!-- Earnings (Monthly) Card Example 
-							<div class="col-xl-3 col-md-6 mb-4">
-								<div class="card border-left-info shadow h-100 py-2">
-									<div class="card-body">
-										<div class="row no-gutters align-items-center">
-											<div class="col mr-2">
-												<div class="text-xl font-weight-bold text-info text-uppercase mb-1">
-													DISPONIBLES
-												</div>
-												<div class="row no-gutters align-items-center">
-													<div class="col-auto">
-														<div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%
-														</div>
-													</div>
-													<div class="col">
-														<div class="progress progress-sm mr-2">
-															<div class="progress-bar bg-info" role="progressbar"
-																style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-																aria-valuemax="100"></div>
-														</div>
-													</div>
-												</div>
-											</div>
-											<div class="col-auto">
-												<i class="fas fa-clipboard-list fa-3x text-gray-300"></i>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>-->
-
-							<!-- Pending Requests Card Example 
+							<!-- Pending Requests Card Example -->
 							<div class="col-xl-3 col-md-6 mb-4">
 								<div class="card border-left-warning shadow h-100 py-2">
 									<div class="card-body">
 										<div class="row no-gutters align-items-center">
 											<div class="col mr-2">
 												<div class="text-xl font-weight-bold text-warning text-uppercase mb-1">
-													SECCIONES</div>
+													CREAR PUBLICACIÓN</div>
 											</div>
 											<div class="col-auto">
-												<a th:href="@{/secciones}">
+												<a th:href="@{/PublicControlador/FormuCrearpublic}">
 													<i class="fas fa-comments fa-4x text-gray-300"></i>
 												</a>
 											</div>
@@ -334,107 +276,133 @@
 									</div>
 								</div>
 							</div>
-						</div>-->
+						</div>
 
-						<!--Content Row -->
+						<!-- Area Chart -->
+						<div class="card mb-4">
+							<div class="card-header py-3">
+								<h6 class="m-3 font-weight-bold text-primary">VENTA</h6>
+							</div>
+							<tbody>
+								<tr th:each="Publicacion:${listarPublic}"
+									th:if="${Publicacion.tipoLugar == 'VENTA'}">
+									<td>
+										<div class="card text-center">
 
-						<div class="center">
-
-							<!-- Area Chart -->
-							<div class="col-xl-8 col-lg-7">
-								<div class="card shadow mb-4">
-
-									<div class="container-fluid">
-										<table class="table table-responsive table-striped table-hover">
-											<tbody>
-												<tr th:each="Publicacion:${listarPublic}"
-													th:if="${Publicacion.tipoLugar == 'VENTA'}">
-													<td>
+											<div id="carouselExampleControls" class="carousel slide"
+												data-ride="carousel">
+												<div class="carousel-inner">
+													<div class="carousel-item active">
 														<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
-															class="bd-placeholder-img rounded img-fluid">
+															class="d-block w-100" alt="primera imagen">
+													</div>
+													<div class="carousel-item">
+														<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+															class="d-block w-100" alt="Segunda imagen">
+													</div>
+													<div class="carousel-item">
+														<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+															class="d-block w-100" alt="Tercer imagen">
+													</div>
+												</div>
+												<!--<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+											data-slide="prev">
+											<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+											<span class="sr-only">Anterior</span>
+										</a>
+										<a class="carousel-control-next" href="#carouselExampleControls" role="button"
+											data-slide="next">
+											<span class="carousel-control-next-icon" aria-hidden="true"></span>
+											<span class="sr-only">Siguiente</span>
+										</a>-->
+											</div>
 
-														<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
-														<p scope="row" th:text="${Publicacion.Descripcion}"></p>
-														<p scope="row" th:text="${Publicacion.direccion}"></p>
-														<P scope="row" th:text="${Publicacion.disponible}"></P>
-														<p scope="row" th:text="${Publicacion.medida}"></p>
-														<p scope="row" th:text="${Publicacion.precio}"></p>
+									</td>
+									<br>
 
-													</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
+									<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
+									<label>
+										DESCRIPCIÓN
+										<p scope="row" th:text="${Publicacion.Descripcion}"></p>
+									</label>
+									<label>
+										DIRECCIÓN DE LA PROPIEDAD
+										<p scope="row" th:text="${Publicacion.direccion}"></p>
+									</label>
+									<label>
+										DISPONIBLE PARA
+										<P scope="row" th:text="${Publicacion.disponible}"></P>
+									</label>
+									<label>
+										MEDIDAS DE LA PROPIEDAD
+										<p scope="row" th:text="${Publicacion.medida}"></p>
 
-								</div>
-							</div>
-
+									</label>
+									<label>
+										PRECIO
+										<p scope="row" th:text="${Publicacion.precio}"></p>
+									</label>
 						</div>
-						<!--container-fluid -->
-
-					</div>
-					<!-- End of Main Content -->
-
-					<!--Footer-->
-					<footer class="sticky-footer bg-white">
-						<div class="container my-auto">
-							<div class="copyright text-center my-auto">
-								<span>Copyright; MR 2023</span>
-							</div>
-						</div>
-					</footer>
-					<!-- End of Footer -->
-
-				</div>
-				<!-- End of Content Wrapper -->
-
-			</div>
-			<!-- End of Page Wrapper -->
-
-			<!-- Scroll to Top Button-->
-			<a class="scroll-to-top rounded" href="#page-top">
-				<i class="fas fa-angle-up"></i>
-			</a>
-
-			<!-- Logout Modal-->
-			<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-				aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-							<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">×</span>
-							</button>
-						</div>
-						<div class="modal-body">Select "Logout" below if you are ready to end your
-							current session.
-						</div>
-						<div class="modal-footer">
-							<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-							<a class="btn btn-primary" href="login.html">Logout</a>
-						</div>
+						</tr>
+						</tbody>
 					</div>
 				</div>
 			</div>
 
-			<!-- Bootstrap core JavaScript-->
-			<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-			<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
-			<!-- Core plugin JavaScript-->
-			<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
-
-			<!-- Custom scripts for all pages-->
-			<script th:src="@{/js/sb-admin-2.min.js}"></script>
-
-			<!-- Page level plugins -->
-			<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
-
-			<!-- Page level custom scripts -->
-			<script th:src="@{/js/demo/chart-area-demo.js}"></script>
-			<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
-
+			<!--container-fluid -->
+		</div>
+	</div>
+	<!-- End of Main Content -->
+	<!--Footer-->
+	<footer class="sticky-footer bg-white">
+		<div class="container my-auto">
+			<div class="copyright text-center my-auto">
+				<span>Copyright; MR 2023</span>
+			</div>
+		</div>
+	</footer>
+	<!-- End of Footer -->
+	</div>
+	<!-- End of Content Wrapper -->
+	</div>
+	<!-- End of Page Wrapper -->
+	<!-- Scroll to Top Button-->
+	<a class="scroll-to-top rounded" href="#page-top">
+		<i class="fas fa-angle-up"></i>
+	</a>
+	<!-- Logout Modal-->
+	<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+					<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">×</span>
+					</button>
+				</div>
+				<div class="modal-body">Select "Logout" below if you are ready to end your
+					current session.
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+					<a class="btn btn-primary" href="login.html">Logout</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Bootstrap core JavaScript-->
+	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<!-- Core plugin JavaScript-->
+	<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
+	<!-- Custom scripts for all pages-->
+	<script th:src="@{/js/sb-admin-2.min.js}"></script>
+	<!-- Page level plugins -->
+	<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+	<!-- Page level custom scripts -->
+	<script th:src="@{/js/demo/chart-area-demo.js}"></script>
+	<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
 </body>
 
 </html>
