--- a/src/main/resources/templates/secciones.html
+++ b/src/main/resources/templates/secciones.html
@@ -112,7 +112,7 @@
 
 			<!-- Nav Item - Tables -->
 			<li class="nav-item">
-				<a class="nav-link" th:href="@{/AdministrarPrincipal}">
+				<a class="nav-link" th:href="@{/PublicControlador/}">
 					<i class="fas fa-fw fa-table"></i>
 					<span>PUBLICACIONES</span></a>
 			</li>
