--- a/src/main/resources/templates/terrenos.html
+++ b/src/main/resources/templates/terrenos.html
@@ -112,7 +112,7 @@
 
 			<!-- Nav Item - Tables -->
 			<li class="nav-item">
-				<a class="nav-link" th:href="@{/AdministrarPrincipal}">
+				<a class="nav-link" th:href="@{/PublicControlador/}">
 					<i class="fas fa-fw fa-table"></i>
 					<span>PUBLICACIONES</span></a>
 			</li>
@@ -209,7 +209,7 @@
 								</a>
 								<a class="dropdown-item" th:href="@{/PublicControlador/}">
 									<i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-									MIS PUBLICACIONES
+									PUBLICACIONES
 								</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
@@ -257,7 +257,7 @@
 													PUBLICACIONES</div>
 											</div>
 											<div class="col-auto">
-												<a th:href="@{/AdministrarPrincipal}">
+												<a th:href="@{/PublicControlador/}">
 													<i class="fas fa-fw fa-table fa-4x text-gray-400"></i>
 												</a>
 											</div>
