--- a/src/main/resources/templates/FormuCrearpublic.html
+++ b/src/main/resources/templates/FormuCrearpublic.html
@@ -163,7 +163,7 @@
 								</a>
 								<a class="dropdown-item" th:href="@{/PublicControlador/}">
 									<i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-									MIS PUBLICACIONES
+									PUBLICACIONES
 								</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
