--- a/src/main/resources/templates/casas.html
+++ b/src/main/resources/templates/casas.html
@@ -112,7 +112,7 @@
 
 			<!-- Nav Item - Tables -->
 			<li class="nav-item">
-				<a class="nav-link" th:href="@{/AdministrarPrincipal}">
+				<a class="nav-link" th:href="@{/PublicControlador/}">
 					<i class="fas fa-fw fa-table"></i>
 					<span>PUBLICACIONES</span></a>
 			</li>
@@ -256,7 +256,7 @@
 													PUBLICACIONES</div>
 											</div>
 											<div class="col-auto">
-												<a th:href="@{/AdministrarPrincipal}">
+												<a th:href="@{/PublicControlador/}">
 													<i class="fas fa-fw fa-table fa-4x text-gray-400"></i>
 												</a>
 											</div>
