--- a/src/main/resources/templates/lotes.html
+++ b/src/main/resources/templates/lotes.html
@@ -112,7 +112,7 @@
 
 			<!-- Nav Item - Tables -->
 			<li class="nav-item">
-				<a class="nav-link" th:href="@{/AdministrarPrincipal}">
+				<a class="nav-link" th:href="@{/PublicControlador/}">
 					<i class="fas fa-fw fa-table"></i>
 					<span>PUBLICACIONES</span></a>
 			</li>
@@ -207,10 +207,6 @@
 									<i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
 									AJUSTES
 								</a>
-								<a class="dropdown-item" th:href="@{/PublicControlador/}">
-									<i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-									MIS PUBLICACIONES
-								</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
 									<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -256,7 +252,7 @@
 													PUBLICACIONES</div>
 											</div>
 											<div class="col-auto">
-												<a th:href="@{/AdministrarPrincipal}">
+												<a th:href="@{/PublicControlador/}">
 													<i class="fas fa-fw fa-table fa-4x text-gray-400"></i>
 												</a>
 											</div>
