--- a/src/main/resources/templates/venta.html
+++ b/src/main/resources/templates/venta.html
@@ -104,7 +104,7 @@
 
 			<!-- Nav Item - Tables -->
 			<li class="nav-item">
-				<a class="nav-link" th:href="@{/AdministrarPrincipal}">
+				<a class="nav-link" th:href="@{/PublicControlador/}">
 					<i class="fas fa-fw fa-table"></i>
 					<span>PUBLICACIONES</span></a>
 			</li>
@@ -205,7 +205,7 @@
 								</a>
 								<a class="dropdown-item" th:href="@{/PublicControlador/}">
 									<i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-									MIS PUBLICACIONES
+									PUBLICACIONES
 								</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
@@ -249,7 +249,7 @@
 													PUBLICACIONES</div>
 											</div>
 											<div class="col-auto">
-												<a th:href="@{/AdministrarPrincipal}">
+												<a th:href="@{/PublicControlador/}">
 													<i class="fas fa-fw fa-table fa-4x text-gray-400"></i>
 												</a>
 											</div>
@@ -285,7 +285,7 @@
 							</div>
 							<tbody>
 								<tr th:each="Publicacion:${listarPublic}"
-									th:if="${Publicacion.tipoLugar == 'VENTA'}">
+									th:if="${Publicacion.disponible == 'VENTA'}">
 									<td>
 										<div class="card text-center">
 
